--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,3 @@
 sonar.projectKey=Progetto-H21
+sonar.java.coveragePlugin=jacoco
+sonar.coverage.jacoco.xmlReportPaths=target/jacoco-report/jacoco.xml
