upgrade to angular 15

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -5,15 +5,35 @@
     {
       "files": ["*.ts"],
       "parserOptions": {
-        "project": ["tsconfig.json"],
+        //"project": ["tsconfig.app.json", "tsconfig.spec.json"],
         "createDefaultProgram": true
       },
-      "extends": ["plugin:@angular-eslint/recommended"],
-      // .eslintrc.json
+      "extends": [
+        "plugin:@angular-eslint/recommended",
+        "plugin:@angular-eslint/template/process-inline-templates"
+      ],
       "rules": {
         "@angular-eslint/no-empty-lifecycle-method": "off",
         "@angular-eslint/use-lifecycle-interface": "warn",
-        "@angular-eslint/component-class-suffix": "warn"
+        "@angular-eslint/component-class-suffix": "warn",
+        "@angular-eslint/directive-selector": [
+          "error",
+          {
+            "type": "attribute",
+            "prefix": "app",
+            "style": "camelCase"
+          }
+        ],
+        "@angular-eslint/component-selector": [
+          "error",
+          {
+            "type": "element",
+            "prefix": "app",
+            "style": "kebab-case"
+          }
+        ],
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-inferrable-types": "off"
       }
     },
     {
