--- a/client/tsconfig.spec.json
+++ b/client/tsconfig.spec.json
@@ -2,10 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "module": "es2020",
+    "module": "ES2022",
     "sourceMap": true,
     "esModuleInterop": true,
-    "types": ["jasmine"]
+    "types": ["jasmine", "node"]
   },
   "files": ["src/test.ts", "src/polyfills.ts"],
   "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
