--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,10 +54,7 @@ jobs:
       - name: Run SonarQube Analysis
         working-directory: ./server
         shell: cmd
-        env:
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -Dsonar.host.url=%SONAR_HOST_URL% -Dsonar.login=%SONAR_TOKEN% -DskipTests
+        run: mvn sonar:sonar -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} -Dsonar.login=${{ secrets.SONAR_TOKEN }} -DskipTests
       # -----------------------------
       # Frontend (Angular/JS/TS)
       # -----------------------------
